完成的项目默认在后面

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1251,6 +1251,11 @@ body.dragging-active {
   .quadrant.first-quadrant .quadrant-title {
     font-size: 1.8rem; /* 从 2rem 减少 */
   }
+
+  .sidebar-toggle{
+    width: 37px;
+    height: 90px;
+  }
 }
 
 /* 动画 */
